--- a/samples/simple/www/index.html
+++ b/samples/simple/www/index.html
@@ -1,74 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <!--
-     #
-     # Licensed to the Apache Software Foundation (ASF) under one
-     # or more contributor license agreements.  See the NOTICE file
-     # distributed with this work for additional information
-     # regarding copyright ownership.  The ASF licenses this file
-     # to you under the Apache License, Version 2.0 (the
-     # "License"); you may not use this file except in compliance
-     # with the License.  You may obtain a copy of the License at
-     #
-     # http://www.apache.org/licenses/LICENSE-2.0
-     #
-     # Unless required by applicable law or agreed to in writing,
-     # software distributed under the License is distributed on an
-     # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     #  KIND, either express or implied.  See the License for the
-     # specific language governing permissions and limitations
-     # under the License.
-     #
-     -->
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, 
+            minimum-scale=1, width=device-width, height=device-height" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Scandit Barcode Scanner</title>
     </head>
-    <body onload="onBodyLoad()" style="background: url(img/ScanditSDKDemo-Splash.png) no-repeat;background-size: 100%;background-color: #000000">
+    <body>
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
-            function onBodyLoad() {
-                document.addEventListener("deviceready", onDeviceReady, false);
+            // On Windows, the alert function doesn't exist, so we add it.
+            window.alert = window.alert !== undefined ? window.alert : function (message) {
+                var alertBox = new Windows.UI.Popups.MessageDialog(message);
+                alertBox.showAsync();
+            };
+            function success(session) {
+                alert("Scanned " + session.newlyRecognizedCodes[0].symbology 
+                        + " code: " + session.newlyRecognizedCodes[0].data);
             }
-
-            function success(resultArray) {
-                alert("Scanned " + resultArray[0] + " code: " + resultArray[1]);
-
-            	// NOTE: Scandit SDK Phonegap Plugin Versions 1.* for iOS report
-            	// the scanning result as a concatenated string.
-            	// Starting with version 2.0.0, the Scandit SDK Phonegap
-            	// Plugin for iOS reports the result as an array
-            	// identical to the way the Scandit SDK plugin for Android reports results.
-
-            	// If you are running the Scandit SDK Phonegap Plugin Version 1.* for iOS,
-            	// use the following approach to generate a result array from the string result returned:
-            	// resultArray = result.split("|");
-            }
-
             function failure(error) {
                 alert("Failed: " + error);
             }
-
             function scan() {
-                // See below for all available options.
-                cordova.exec(success, failure, "ScanditSDK", "scan",
-                             ["ENTER YOUR APP KEY HERE",
-                              {"beep": true,
-                              "code128" : false,
-                              "dataMatrix" : false}]);
+                Scandit.License.setAppKey("-- ENTER YOUR APP KEY HERE --");
+                var settings = new Scandit.ScanSettings();
+                settings.setSymbologyEnabled(Scandit.Barcode.Symbology.EAN13, true);
+                settings.setSymbologyEnabled(Scandit.Barcode.Symbology.UPC12, true);
+                settings.setSymbologyEnabled(Scandit.Barcode.Symbology.EAN8, true);
+                var picker = new Scandit.BarcodePicker(settings);
+                picker.show(success, null, failure);
+                picker.startScanning();
             }
-
-            app.initialize();
         </script>
-
         <div align="center" valign="center">
-            <input type="button" value="scan" onclick="scan()" style="margin-top: 230px; width: 100px; height: 30px; font-size: 1em"/>
+            <input type="button" value="scan" onclick="scan()" style="margin-top: 230px; 
+                    width: 100px; height: 30px; font-size: 1em"/>
         </div>
     </body>
 </html>
